Testing threshold on Fischer

--- a/05_cohesin_FCNN.ipynb
+++ b/05_cohesin_FCNN.ipynb
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "b82b4e15",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,6 @@
     "y_pred_prob = model_dropout_03.predict(x_test_vst_min_max)\n",
     "y_pred = (y_pred_prob >= threshold).astype(int)\n",
     "\n",
-    "# Classification report & confusion matrix\n",
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(y_test_encoded, y_pred, target_names=['wtAML', 'cohesinAML']))\n",
     "print(\"Confusion Matrix:\")\n",
@@ -656,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a985ec2a",
    "metadata": {},
    "outputs": [
@@ -696,7 +695,6 @@
     "y_pred_prob = model.predict(Fischer_vst_min_max)\n",
     "y_pred = (y_pred_prob >= 0.5).astype(int)\n",
     "\n",
-    "# Classification report & confusion matrix\n",
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(Fischer_labels_encoded, y_pred, target_names=['wtAML', 'cohesinAML']))\n",
     "print(\"Confusion Matrix:\")\n",
@@ -713,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7c2fd247",
    "metadata": {},
    "outputs": [
@@ -746,7 +744,6 @@
     "y_pred_prob = model.predict(Fischer_vst_min_max)\n",
     "y_pred = (y_pred_prob >= 0.3).astype(int)\n",
     "\n",
-    "# Classification report & confusion matrix\n",
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(Fischer_labels_encoded, y_pred, target_names=['wtAML', 'cohesinAML']))\n",
     "print(\"Confusion Matrix:\")\n",
@@ -806,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "572ca6de",
    "metadata": {},
    "outputs": [
@@ -834,11 +831,132 @@
    "source": [
     "y_pred = (y_pred_prob >= 0.38).astype(int)\n",
     "\n",
-    "# Classification report & confusion matrix\n",
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(y_test_encoded, y_pred, target_names=['wtAML', 'cohesinAML']))\n",
     "print(\"Confusion Matrix:\")\n",
     "print(confusion_matrix(y_test_encoded, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e0778e",
+   "metadata": {},
+   "source": [
+    "## Test new thresholds on Fischer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "684478b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       wtAML       0.61      0.90      0.73        21\n",
+      "  cohesinAML       0.87      0.52      0.65        25\n",
+      "\n",
+      "    accuracy                           0.70        46\n",
+      "   macro avg       0.74      0.71      0.69        46\n",
+      "weighted avg       0.75      0.70      0.69        46\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[19  2]\n",
+      " [12 13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fischer_pred_prob = model.predict(Fischer_vst_min_max)\n",
+    "Fischer_pred = (Fischer_pred_prob >= 0.38).astype(int)\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(Fischer_labels_encoded, Fischer_pred, target_names=['wtAML', 'cohesinAML']))\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(Fischer_labels_encoded, Fischer_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "25ad2389",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       wtAML       0.67      0.76      0.71        21\n",
+      "  cohesinAML       0.77      0.68      0.72        25\n",
+      "\n",
+      "    accuracy                           0.72        46\n",
+      "   macro avg       0.72      0.72      0.72        46\n",
+      "weighted avg       0.72      0.72      0.72        46\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[16  5]\n",
+      " [ 8 17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fischer_pred_prob = model.predict(Fischer_vst_min_max)\n",
+    "Fischer_pred = (Fischer_pred_prob >= 0.3).astype(int)\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(Fischer_labels_encoded, Fischer_pred, target_names=['wtAML', 'cohesinAML']))\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(Fischer_labels_encoded, Fischer_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d9d4c0bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step \n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       wtAML       0.88      0.71      0.79        21\n",
+      "  cohesinAML       0.79      0.92      0.85        25\n",
+      "\n",
+      "    accuracy                           0.83        46\n",
+      "   macro avg       0.84      0.82      0.82        46\n",
+      "weighted avg       0.83      0.83      0.82        46\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[15  6]\n",
+      " [ 2 23]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fischer_pred_prob = model.predict(Fischer_vst_min_max)\n",
+    "Fischer_pred = (Fischer_pred_prob >= 0.25).astype(int)\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(Fischer_labels_encoded, Fischer_pred, target_names=['wtAML', 'cohesinAML']))\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(Fischer_labels_encoded, Fischer_pred))"
    ]
   },
   {
