fixed an output cell

--- a/11_FLT3_ITD_FCNN.ipynb
+++ b/11_FLT3_ITD_FCNN.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d25caa50",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2026-01-01 15:35:52.662973: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2026-01-01 15:35:52.671480: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-01-01 15:35:52.935614: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2026-01-01 15:35:54.059341: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2026-01-01 15:35:54.060983: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "/venv/cohANN/lib/python3.12/site-packages/keras/src/export/tf2onnx_lib.py:8: FutureWarning: In the future `np.object` will be defined as the corresponding NumPy scalar.\n",
-      "  if not hasattr(np, \"object\"):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from py_functions import plot_training_history, focal_loss\n",
     "import os\n",
@@ -557,31 +542,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b82b4e15",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-01-02 15:44:48.031631: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "Test Accuracy: 0.5714\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step \n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
       "\n",
       "Classification Report:\n",
       "                 precision    recall  f1-score   support\n",
       "\n",
-      "    FLT3_ITD.WT       0.95      0.67      0.79       188\n",
-      "FLT3_ITD.Mutant       0.41      0.88      0.56        49\n",
+      "    FLT3_ITD.WT       0.92      0.94      0.93       188\n",
+      "FLT3_ITD.Mutant       0.74      0.69      0.72        49\n",
       "\n",
-      "       accuracy                           0.71       237\n",
-      "      macro avg       0.68      0.77      0.67       237\n",
-      "   weighted avg       0.84      0.71      0.74       237\n",
+      "       accuracy                           0.89       237\n",
+      "      macro avg       0.83      0.82      0.82       237\n",
+      "   weighted avg       0.88      0.89      0.88       237\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[126  62]\n",
-      " [  6  43]]\n"
+      "[[176  12]\n",
+      " [ 15  34]]\n"
      ]
     }
    ],
@@ -590,7 +582,7 @@
     "print(f\"\\nTest Accuracy: {test_acc:.4f}\")\n",
     "\n",
     "# Predictions\n",
-    "threshold = 0.3\n",
+    "threshold = 0.4\n",
     "y_pred_prob = model_dropout_03.predict(x_test_vst_min_max)\n",
     "y_pred = (y_pred_prob >= threshold).astype(int)\n",
     "\n",
