--- a/05_cohesin_FCNN.ipynb
+++ b/05_cohesin_FCNN.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "284392a1",
    "metadata": {},
    "outputs": [
@@ -269,6 +269,8 @@
     "    Dropout(0.2, name='dropout_2'),\n",
     "    # Dense(64, activation='relu', name='hidden_layer_3'),\n",
     "    # Dropout(0.2, name='dropout_3'),\n",
+    "    # Dense(64, activation='relu', name='hidden_layer_4'),\n",
+    "    # Dropout(0.2, name='dropout_4'),\n",
     "    Dense(1, activation='sigmoid', name='output_layer')\n",
     "])\n",
     "\n",
